--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "angular": "^1.5.0",
     "angular-animate": "^1.3.0",
     "angular-route": "^1.3.0",
+    "angular-ui-tree": "^2.10.0",
     "bootstrap": "^3.2.0"
   },
   "devDependencies": {
