--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "angular-animate": "^1.3.0",
     "angular-route": "^1.3.0",
     "angular-ui-tree": "^2.10.0",
-    "bootstrap": "^3.2.0"
+    "bootstrap": "^3.2.0",
+    "ng-dialog": "^0.5.5"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
