--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "angular-route": "^1.3.0",
     "angular-ui-tree": "^2.10.0",
     "bootstrap": "^3.2.0",
-    "ng-dialog": "^0.5.5"
+    "ng-dialog": "^0.5.5",
+    "toastr": "~2.1.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
